--- a/contact.html
+++ b/contact.html
@@ -324,10 +324,10 @@ textarea {
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/html/home.html">Trang chủ</a>
+                <a class="nav-link" href="index.html">Trang chủ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/products.html">Sản phẩm</a>
+                <a class="nav-link" href="products.html">Sản phẩm</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">Dịch vụ</a>
@@ -336,7 +336,7 @@ textarea {
                 <a class="nav-link" href="#destinations">Tin tức</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact">Liên hệ</a>
+                <a class="nav-link" href="">Liên hệ</a>
               </li>
             </ul>
             <div class="navbar-icons d-none d-lg-flex">
