--- a/index.html
+++ b/index.html
@@ -1013,10 +1013,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#home">Trang chủ</a>
+                  <a class="nav-link" href="">Trang chủ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/products.html">Sản phẩm</a>
+                  <a class="nav-link" href="products.html">Sản phẩm</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#about">Dịch vụ</a>
@@ -1025,7 +1025,7 @@
                   <a class="nav-link" href="#destinations">Tin tức</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/contact.html">Liên hệ</a>
+                  <a class="nav-link" href="contact.html">Liên hệ</a>
                 </li>
               </ul>
               <div class="navbar-icons d-none d-lg-flex">
