--- a/products.html
+++ b/products.html
@@ -590,10 +590,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/html/home.html">Trang chủ</a>
+                <a class="nav-link" href="index.html">Trang chủ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#packages">Sản phẩm</a>
+                <a class="nav-link" href="">Sản phẩm</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">Dịch vụ</a>
@@ -602,7 +602,7 @@
                 <a class="nav-link" href="#destinations">Tin tức</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/contact.html">Liên hệ</a>
+                <a class="nav-link" href="contact.html">Liên hệ</a>
               </li>
             </ul>
             <div class="navbar-icons d-none d-lg-flex">
