--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sweatshirt - Lapak Baju</title>
+    <title>Nội thất - Kelvin Hào</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
       rel="stylesheet"
@@ -141,6 +141,37 @@
       .header-btn:hover {
         color: #667eea;
       }
+
+      /* Mobile */
+@media (max-width: 576px) {
+
+  /* Giảm chiều cao nav */
+  nav.navbar, 
+  .navbar {
+    padding: 6px !important;
+    padding-bottom: 6px !important;
+    min-height: 50px !important;
+  }
+
+  /* Thu nhỏ logo */
+  .navbar-brand img {
+    height: 28px !important;
+    width: auto !important;
+  }
+
+  /* Giảm font-size item trong nav */
+  .nav-link {
+    font-size: 14px !important;
+    padding: 6px 10px !important;
+  }
+
+  /* Nếu bạn có button toggle → thu nhỏ lại */
+  .navbar-toggler {
+    padding: 2px 6px !important;
+    transform: scale(0.85);
+  }
+}
+
 
       /* Breadcrumb */
       .breadcrumb-section {
@@ -578,7 +609,7 @@
     <header class="main-header">
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <img src="/image/image.png" alt="" style="width: 120px" />
+          <img src="image/image.png" alt="" style="width: 120px" />
           <button
             class="navbar-toggler"
             type="button"
@@ -880,7 +911,7 @@
             <!-- Product 4 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/den.jpg" alt="Đèn phòng khách" />
+                <img src="image/den.jpg" alt="Đèn phòng khách" />
                 <span class="product-badge hot-promo">HOT PROMO</span>
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
@@ -906,7 +937,7 @@
             <!-- Product 5 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/ghe.jpg" alt="Ghế" />
+                <img src="image/ghe.jpg" alt="Ghế" />
                 <span class="product-badge new">NEW</span>
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
@@ -932,7 +963,7 @@
             <!-- Product 6 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/turuou.jpg" alt="Tủ rượu" />
+                <img src="image/turuou.jpg" alt="Tủ rượu" />
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
                 </button>
@@ -957,7 +988,7 @@
             <!-- Product 7 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/giuong.jpg" alt="Giường ngủ" />
+                <img src="image/giuong.jpg" alt="Giường ngủ" />
                 <span class="product-badge hot-promo">HOT PROMO</span>
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
@@ -1003,7 +1034,7 @@
           <!-- Logo & Subscribe -->
           <div class="col-lg-3 col-md-6">
             <img
-              src="/image/logo.png"
+              src="image/logo.png"
               alt=""
               style="width: 120px; object-fit: cover"
             />
