Cập nhật nội dung trang web

--- a/index.html
+++ b/index.html
@@ -1477,66 +1477,62 @@
     <!-- Provinces Section -->
     <section class="provinces-section py-5" id="destinations">
       <div class="container">
-        <h2 class="section-title mb-2">Provinsi di INDONESIA</h2>
+        <h2 class="section-title mb-2">Tìm thứ cần cho gia đình bạn</h2>
         <div class="search-box mb-4">
           <i class="fas fa-search"></i>
-          <input type="text" placeholder="Cari Provinsi" />
+          <input type="text" placeholder="Bàn làm viêc?" />
           <i class="fas fa-home"></i>
         </div>
 
         <div class="provinces-scroll">
           <div class="province-card">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtB9NSfebKVUEBr8oi2W7q0jLsDHEJ5kFZArRj7R46gBFcL9vlC5x6gimo91OsE_rh9_E&usqp=CAU"
+              src="https://i.pinimg.com/1200x/d1/9c/b5/d19cb564ff2454cf9f9652bac03faff3.jpg"
               alt="Yogyakarta"
             />
             <div class="province-info">
-              <h3>DI Yogyakarta</h3>
+              <h3>Bàn làm việc tối giản</h3>
               <p>
-                Daerah istimewa Yogyakarta adalah kota di Indonesia yang
-                terkenal dengan...
+                Thiết kế hiện đại với mặt bàn gỗ công nghiệp phủ melamine chống trầy...
               </p>
             </div>
           </div>
 
           <div class="province-card">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtB9NSfebKVUEBr8oi2W7q0jLsDHEJ5kFZArRj7R46gBFcL9vlC5x6gimo91OsE_rh9_E&usqp=CAU"
+              src="https://i.pinimg.com/1200x/66/e8/65/66e865d3fc8fbddcdf1faf01e0c10a63.jpg"
               alt="Jakarta"
             />
             <div class="province-info">
-              <h3>DKI Jakarta</h3>
+              <h3>Bàn làm việc đa năng</h3>
               <p>
-                Jakarta adalah ibukota negara dan kota terbesar di Indonesia
-                yang terkenal...
+                Bàn tích hợp ngăn kéo và kệ bên hông, giúp tối ưu không gian lưu trữ. Mặt bàn rộng rãi, phù hợp cho cả laptop và tài liệu...
               </p>
             </div>
           </div>
 
           <div class="province-card">
             <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtB9NSfebKVUEBr8oi2W7q0jLsDHEJ5kFZArRj7R46gBFcL9vlC5x6gimo91OsE_rh9_E&usqp=CAU"
+              src="https://i.pinimg.com/736x/e1/5e/6a/e15e6a03442bd647be0b13cb237b8ad1.jpg"
               alt="Jawa Timur"
             />
             <div class="province-info">
-              <h3>Jawa Timur</h3>
+              <h3>Kệ sách đứng</h3>
               <p>
-                Jawa Timur adalah sebuah provinsi yang terletak di bagian timur
-                Pulau Jawa...
+                Kệ sách 5 tầng phong cách Bắc Âu, sử dụng gỗ MDF phủ veneer vân gỗ tự nhiên. Thiết kế thanh thoát...
               </p>
             </div>
           </div>
 
           <div class="province-card">
             <img
-              src="https://images.unsplash.com/photo-1537996194471-e657df975ab4?w=400&h=300&fit=crop"
+              src="https://i.pinimg.com/736x/e7/90/04/e790041d82ec2052448dc1003ddfb9d3.jpg"
               alt="Bali"
             />
             <div class="province-info">
-              <h3>Bali</h3>
+              <h3>Kệ sách treo tường</h3>
               <p>
-                Bali adalah sebuah wilayah provinsi yang terletak di Indonesia
-                dan terkenal...
+                Kệ treo tường hình chữ L, giúp tận dụng không gian trống hiệu quả. Là điểm nhấn trang trí vừa tiện dụng vừa thẩm mỹ...
               </p>
             </div>
           </div>
