--- a/products.html
+++ b/products.html
@@ -830,7 +830,7 @@
             <!-- Product 1 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/banlamviec.jpg" alt="Bàn làm việc" />
+                <img src="image/banlamviec.jpg" alt="Bàn làm việc" />
                 <span class="product-badge new">NEW</span>
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
@@ -860,7 +860,7 @@
             <!-- Product 2 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/cua.jpg" alt="Cửa gỗ" />
+                <img src="image/cua.jpg" alt="Cửa gỗ" />
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
                 </button>
@@ -885,7 +885,7 @@
             <!-- Product 3 -->
             <div class="product-card">
               <div class="product-image">
-                <img src="/image/tuquanao2.jpg" alt="Tủ quần áo" />
+                <img src="image/tuquanao2.jpg" alt="Tủ quần áo" />
                 <span class="product-badge best-seller">BEST SELLER</span>
                 <button class="wishlist-btn">
                   <i class="far fa-heart"></i>
